@@ -7,7 +7,7 @@
         <field  name="description"  type="text"/>
         <field  name="amount"   type="decimal" length="10,2"/>
         <field  name="vatid"  type="integer"/>
-        <field  name="quantity"  type="integer" default="1"/>
+        <field  name="quantity"  type="decimal" length="10,2" default="0"/>
         <field  name="discount"  type="integer" default="0"/>
         <field  name="rowcounter"   type="integer"/>
 
